adopt regular fetch api pipeline

--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     <p class="elem">You did not connect to the backend. 後端未連接。</p>
 
     <script type="text/javascript" defer>
-      fetch('http://127.0.0.1:8080').then(async (resp) => {
-        const dat = await resp.json()
-        const elem = document.querySelector('.elem')
+      fetch('http://127.0.0.1:8080')
+        .then((resp) => resp.json())
+        .then((data) => {
+          const elem = document.querySelector('.elem')
 
-        elem.innerHTML = `${dat.text}<br />Time connected: ${new Date(
-          dat.timestamp,
-        ).toString()}`
-        elem.style.color = '#0f0'
-      })
+          elem.innerHTML = `${data.text}<br />Time connected: ${new Date(
+            data.timestamp,
+          ).toString()}`
+          elem.style.color = '#0f0'
+        })
     </script>
   </body>
 </html>
